crates/toner-tlb-macros/tests/compile-fail/separate_cell_orphan_start.rs
use toner_tlb_macros::CellDeserialize;

#[derive(CellDeserialize)]
struct OrphanStart {
    #[tlb(separate_cell_start, bits)]
    a: u8,
    #[tlb(bits)]
    b: u8,
}

fn main() {}
